fixing overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 3em;
   background-color: #010c11;
